# simple_shell

./: .gitignore  0x00-alias.c  0x01-alias.c  0x02-alias.c  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  README.md  alias-0x00.c  alias-0x01.c  alias-0x02.c  alias.c  alias.h  command-0x00.c  command-0x01.c  command-0x02.c  command-0x03.c  command.c  command.h  constants.h  executor.c  free_func.c  hsh  main  main.c  main.h  run.sh  shell_func.c  shell_func2.c  shell_func3.c  shell_func4.c  shell_func5.c  shutils-0x00.c  shutils-0x01.c  shutils-0x02.c  shutils-0x03.c  shutils-0x04.c  shutils-0x05.c  shutils.h  shutils_001.c  (+14 more)
tests/: CMakeLists.txt  alias.c  cmd_list.c  shell.c  test_alias.c
